--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.16.3",
     "xterm": "^3.5.1",
     "node-pty": "0.7.6",
+    "webpack": "^3.10.0",
+    "webpack-stream": "^4.0.0",
     "express-ws": "2.0.0-rc.1"
   }
 }
