--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "prestart": "webpack --mode development --watch --progress --display-modules --colors --display-reasons",
+    "start": "node app.js"
   },
   "dependencies": {
     "ejs": "^2.6.1",
