--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ npm-debug.log
 .DS_Store
 fixtures/typings-test/*.js
 package-lock.json
+kubectl.exe
 
 # Directories needed for code coverage
 coverage/
