--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "prestart": "npm cache clean && npm install && webpack",
+    "prestart": "npm install && webpack",
     "start": "node app.js"
   },
   "dependencies": {
@@ -11,7 +11,7 @@
     "express": "^4.16.3",
     "express-ws": "2.0.0-rc.1",
     "keycode": "^2.2.0",
-    "node-pty": "0.7.6",
+    "node-pty": "^0.7.6",
     "webpack": "^3.10.0",
     "webpack-stream": "^4.0.0",
     "xterm": "^3.5.1"
